@@ -1,5 +1,11 @@
 2007-11-06  Chris Lord  <chris@openedhand.com>
 
+	* src/multitap-pad-main.c: (screen_size_changed_cb), (main):
+	Add arguments --daemon, --orientation and --plug, set default
+	orientation to portrait
+
+2007-11-06  Chris Lord  <chris@openedhand.com>
+
 	* gtk-im/Makefile.am:
 	* gtk-im/Makefile.in:
 	* gtk-im/gtkimcontextmultipress.c: (mb_im_context_focus_in),
